--- a/interest.css
+++ b/interest.css
@@ -254,6 +254,125 @@ body.interest-page header {
   }
 }
 
+/*======= EXPERIENCE SECTION =====*/
+
+.experience-page{
+  background-color: rgb(213, 211, 211);
+}
+#experience {
+  text-align: center;
+  padding: 50px 20px;
+  background-color: #f9f9f9;
+  
+}
+.experience-page h1{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+  animation: slide-in-blurred-top 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+
+}
+@keyframes slide-in-blurred-top {
+  0% {
+    -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+            transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    -webkit-transform-origin: 50% 0%;
+            transform-origin: 50% 0%;
+    -webkit-filter: blur(40px);
+            filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+            transform: translateY(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+
+.experience-page p{
+  line-height: 1.7;
+}
+/* Container to hold all job experiences */
+.experience-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 0;
+  margin-top: 2rem;
+  
+  
+}
+
+/* Box styling for each job experience */
+.job-box {
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  width: 45%; /* Adjust the width based on screen size */
+  min-width: 300px;
+  max-width: 500px;
+  margin-bottom: 2rem;
+  transition: transform 0.3s ease;
+}
+
+/* Hover effect for the job box */
+.job-box:hover {
+  transform: scale(1.05);
+}
+
+/* Job title styling */
+.job-box h3 {
+  font-size: 1.8rem;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+/* List items inside each job */
+.job-box ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.job-box li {
+  font-size: 1.2rem;
+  color: #555;
+  line-height: 1.7;
+}
+.mini-contact-note {
+  text-align: center;
+  margin-top: 3rem;
+  padding: 1.5rem;
+  background-color: #f3f4f6;
+  font-size: 1.3rem;
+  color: #333;
+  border-radius: 8px;
+}
+
+.mini-contact-note a {
+  color: #007BFF;
+  font-weight: bold;
+  text-decoration: none;
+  transition: all 0.2s ease;
+  background: radial-gradient(circle at center, #ffffff, #f6f8f8);
+    box-shadow: inset 0 0 80px rgba(0, 255, 255, 0.2);
+    transition: background 1s ease-in-out;
+}
+
+.mini-contact-note a:hover {
+  text-decoration: underline;
+  color: #2e0a2a;
+  transform: scale(1.5);
+  ext-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 0 0 20px rgba(0, 255, 255, 0.6);
+  
+}
+
+
 
 
   /* ====Carousel Container=== */
