--- a/interest.css
+++ b/interest.css
@@ -75,7 +75,7 @@ nav li {
 .menu-link {
     text-decoration: none;
     color: #fff;
-    font-size: 1rem;
+    font-size: 0.5rem;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -85,7 +85,7 @@ nav li {
 .menu-link1{
   text-decoration: none;
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.5rem;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -109,18 +109,18 @@ nav li {
   padding: 0;
 }
 .right-nav ul li a {
-  font-size: 1.5rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 600;
   margin: 0;
   padding: 0;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   justify-content: flex-end;
   
   align-items: center;
 }
 
 .left-nav ul li a {
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: 700;
     justify-content: center;
     margin-right: 0;
@@ -372,6 +372,195 @@ body.interest-page header {
   
 }
 
+/*===== END OF EXPERIENCE ======*/
+
+/*===== CV SECTION  ======*/
+
+
+body.cv-page{
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', Roboto, sans-serif;
+  background-color: #f7f7f7;
+  color: #333;
+  line-height: 1.6;
+  width: 100vw;
+  max-width: 100vw;
+}
+
+.cv-page {
+  max-width: 1100px;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
+  background-color: silver;
+}
+
+.cv-page header {
+  background-color: #373434;
+  color: #fff;
+  border-bottom: 4px solid #8b8c8c;
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+nav a:hover {
+  color: #bcbfbf;
+}
+
+/* ====== Language Switch ====== */
+.language-switch {
+
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 0;
+}
+
+.language-wrapper {
+  position: relative; /* مهم جداً لتحديد مرجع العنصر المطلق */
+  border-radius: 12px;
+}
+
+
+.language-menu {
+  position: absolute;
+  top: 63%; /* تعني تحت الزر مباشرة */
+  left: 0;
+  margin-top: 0.5rem;
+  border: #0a0101;
+  background-color: #007BFF;
+ margin-right: auto;
+  padding: 0;
+  padding-left: 0;
+  border-radius: 20px;
+  display: none;
+  flex-direction: column;
+  gap: 0.2rem;
+  z-index: 1000;
+  border-radius: 5px; 
+  overflow: hidden;   /* Ser till att inga knappar sticker ut */
+}
+
+
+.language-menu button {
+  background-color: #f3f7f6;
+  color: black;
+  padding: 0.4rem 1rem;
+  border: none;
+ 
+  cursor: pointer;
+  width: 100%;
+}
+
+
+.language-menu button:hover {
+  background-color: #97a3ad;
+  color: #0a0101;
+
+}
+
+#cv h1{
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-family: 'Playfair Display', serif;
+  font-size: 40px;
+  font-style: italic;
+  transform: rotate(-3deg);
+  background: linear-gradient(90deg, #878686, #080707);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rotate-scale-down 0.65s linear both;
+}
+@keyframes rotate-scale-down {
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+            transform: scale(1) rotateZ(0);
+  }
+  50% {
+    -webkit-transform: scale(0.5) rotateZ(180deg);
+            transform: scale(0.5) rotateZ(180deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+            transform: scale(1) rotateZ(360deg);
+  }
+}
+
+
+
+
+/* ====== Section Titles ====== */
+.section-title {
+  font-size: 1.6rem;
+  color: #2d3436;
+  background-color: #c6cbcc;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 1.5rem;
+  margin-right: 5rem;
+  border-left: 5px solid #353536;
+  padding-left: 1rem;
+  border-radius: 8px;
+}
+
+/* ====== Content Blocks ====== */
+.experience-item, .education-item, .contact-item, .reference-item {
+  background-color: #ecf0f1;
+  padding: 1rem;
+  border-left: 5px solid #353636;
+  border-radius: 12px;
+  margin-bottom: 1.5rem;
+  margin-left: 1.5rem;
+  margin-right: 5rem;
+}
+
+.experience-item h3, .education-item h3, .contact-item h3, .reference-item h3 {
+  margin-top: 0;
+  font-size: 1.2rem;
+  color: #2c3e50;
+ 
+}
+
+.experience-item p, .education-item p, .contact-item p, .reference-item p {
+  margin: 0.4rem 0;
+}
+
+
+.contact-info, .reference-info, .education-info, .experience-info{
+  background-color: #ecf0f1;
+  padding: 1rem;
+  border-left: 5px solid #353636;
+  border-radius: 12px;
+  margin-bottom: 1.5rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  background-color: #cecbcb;
+}
+
+
+
+
+/* /* * ====== END OF CV SECTION  ====== */
+/*@media (max-width: 768px) {
+  .cv-page {
+      padding: 1rem;
+  }
+
+  nav ul {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.5rem;
+  }
+
+  
+} */ 
+
 
 
 
@@ -482,6 +671,52 @@ body.interest-page header {
       width: 173px;
       height: 170px;
     }
+    .section-title {
+      font-size: 20px;
+      color: #2d3436;
+      background-color: #c6cbcc;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      margin-left: 12px;
+      margin-right: 12px;
+      border-left: 5px solid #353536;
+      padding-left: 1rem;
+      border-radius: 8px;
+    }
+    
+    /* ====== Content Blocks ====== */
+    .experience-item, .education-item, .contact-item, .reference-item {
+      font-size: 16px;
+      padding: 8px;
+      border-left: 5px solid #353636;
+      border-radius: 20px;
+      margin-bottom: 12px;
+      margin-left: 12px;
+      margin-right: 12px;
+    }
+    
+    .experience-item h3, .education-item h3, .contact-item h3, .reference-item h3 {
+      margin-top: 0;
+      font-size: 18px;
+      color: #2c3e50;
+     
+    }
+    
+    .experience-item p, .education-item p, .contact-item p, .reference-item p {
+      margin: 8px 0;
+    }
+    
+    
+    .contact-info, .reference-info, .education-info, .experience-info{
+     
+      padding: 0.5rem;
+      border-left: 5px solid #353636;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+      margin-left: 12px;
+      margin-right: 12px;
+     
+    }
    
   
   }
@@ -529,6 +764,52 @@ body.interest-page header {
       margin-bottom: 0;
       margin-top: 1rem;
       
+  }
+  .section-title {
+    font-size: 16px;
+    color: #2d3436;
+    background-color: #c6cbcc;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 8px;
+    margin-right: 8px;
+    border-left: 5px solid #353536;
+    padding-left: 1rem;
+    border-radius: 8px;
+  }
+  
+  /* ====== Content Blocks ====== */
+  .experience-item, .education-item, .contact-item, .reference-item {
+    font-size: 14px;
+    padding: 8px;
+    border-left: 5px solid #353636;
+    border-radius: 20px;
+    margin-bottom: 12px;
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+  
+  .experience-item h3, .education-item h3, .contact-item h3, .reference-item h3 {
+    margin-top: 0;
+    font-size: 15px;
+    color: #2c3e50;
+   
+  }
+  
+  .experience-item p, .education-item p, .contact-item p, .reference-item p {
+    margin: 4px 0;
+  }
+  
+  
+  .contact-info, .reference-info, .education-info, .experience-info{
+   
+    padding: 0.5rem;
+    border-left: 5px solid #353636;
+    border-radius: 12px;
+    margin-bottom: 1rem;
+    margin-left: 12px;
+    margin-right: 12px;
+   
   }
   /* --Carousel Container-- */
 .carousel-container {
@@ -617,6 +898,52 @@ body.interest-page header {
     .slide-image {
       width: 80px;
       height: 95px;
+    }
+    .section-title {
+      font-size: 16px;
+      color: #2d3436;
+      background-color: #c6cbcc;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      margin-left: 8px;
+      margin-right: 8px;
+      border-left: 5px solid #353536;
+      padding-left: 1rem;
+      border-radius: 8px;
+    }
+    
+    /* ====== Content Blocks ====== */
+    .experience-item, .education-item, .contact-item, .reference-item {
+      font-size: 14px;
+      padding: 8px;
+      border-left: 5px solid #353636;
+      border-radius: 20px;
+      margin-bottom: 12px;
+      margin-left: 8px;
+      margin-right: 8px;
+    }
+    
+    .experience-item h3, .education-item h3, .contact-item h3, .reference-item h3 {
+      margin-top: 0;
+      font-size: 15px;
+      color: #2c3e50;
+     
+    }
+    
+    .experience-item p, .education-item p, .contact-item p, .reference-item p {
+      margin: 4px 0;
+    }
+    
+    
+    .contact-info, .reference-info, .education-info, .experience-info{
+     
+      padding: 0.5rem;
+      border-left: 5px solid #353636;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+      margin-left: 12px;
+      margin-right: 12px;
+     
     }
    
     /* --Carousel Container-- */
