--- a/shared.css
+++ b/shared.css
@@ -94,121 +94,114 @@ nav li {
 }
 
 /* === EDUCATION SECTION === */
-section {
-    padding: 3rem 1rem;
-    background-color: #ebeaea;
-    left: 20px;
-    transform: translate(-37px, 2px);
-    border-radius: 20px;
+body.education-page{
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', Roboto, sans-serif;
+  background-color: #f7f7f7;
+  color: #333;
+  line-height: 1.6;
+  width: 100vw;
+  max-width: 100vw;
 }
 
-h2 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 2.5rem;
-    font-weight: bold;
-    margin-top: 3rem;
-    font-family: 'Akaya Telivigala', cursive;
-    font-size: 4rem;
+.education-page {
+  max-width: 1100px;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
+  background-color: silver;
+  background: linear-gradient(90deg, #5d1543, #77314d, #5d2247);
+  background-size: 300% 100%;
+  animation: shimmer-bg 6s ease-in-out infinite;
+}
+
+.education-page header{
+  background-color: #3e3d3d;
+  color: #fff;
+  border-bottom: 4px solid #8b8c8c;
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  background: linear-gradient(to right, #5a5859, #2b2a2a, #7a738e);
+  background-size: 200% 100%;
+  animation: shimmer-bg 8s ease-in-out infinite;
+  color: white;
+  box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);
 }
 
 
-.relative {
-    position: relative;
+nav a:hover {
+  color: #bcbfbf;
+}
+#educations h1{
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-family: 'Playfair Display', serif;
+  font-size: 40px;
+  font-style: italic;
+  transform: rotate(-3deg);
+  background: linear-gradient(90deg, #878686, #080707);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rotate-scale-down 0.65s linear both;
+}
+@keyframes rotate-scale-down {
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+            transform: scale(1) rotateZ(0);
+  }
+  50% {
+    -webkit-transform: scale(0.5) rotateZ(180deg);
+            transform: scale(0.5) rotateZ(180deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+            transform: scale(1) rotateZ(360deg);
+  }
 }
 
-.border-l-2 {
-    border-left: 2px solid #ccc;
-    margin-left: 1.5rem;
-    border-radius: 20px;
-} *
-/* För huvud container för tidslinjen */
-.timeline {
-    position: relative;
-    width: 60%;
-    margin: 50px auto;
-    padding: 20px 0;
+
+.education-title {
+  font-size: 20px;
+  color: #2d3436;
+  background-color: #c6cbcc;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 1.5rem;
+  margin-right: 5rem;
+  border-left: 5px solid #353536;
+  padding-left: 1rem;
+  border-radius: 8px;
 }
 
-/* Huvudlinje */
-.timeline::before {
-    content: '';
-    position: absolute;
-    left: 45px;
-    top: 0;
-    bottom: 0;
-    width: 2px;
-    background-color: #333;
-    transform: translateX(-30%);
+
+.education1-item p{
+  background-color: #ecf0f1;
+  padding: 1rem;
+  border-left: 5px solid #353636;
+  border-radius: 12px;
+  margin-bottom: 1.5rem;
+  margin-left: 1.5rem;
+  margin-right: 5rem;
+} 
+
+
+
+.education1-item{
+  background-color: #ecf0f1;
+  padding: 1rem;
+  border-left: 5px solid #353636;
+  border-radius: 12px;
+  margin-bottom: 1.5rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  background-color: #cecbcb;
 }
 
-/* Varje tidslinjepunkt */
-.timeline-item {
-    display: flex;
-    position: relative;
-    margin-bottom: 40px;
-}
-.timeline-item .line {
-    width: 2rem;
-    height: 4px;
-
-    background-color: rgb(4, 4, 4);
-    position: absolute;
-    top: 20%;
-    left: 10%;
-    transform: translate(-20%,25px);
-    z-index: 3;
-}
-
-/* Cirkeln för varje tidslinjepunkt */
-.timeline-item .circle {
-    width: 70px;
-    height: 70px;
-    background-color: #007bff;
-    border-radius: 50%;
-    position: absolute;
-    left: 20px;
-    transform: translate3d(-10px,30px,100px);
-    z-index: 2;
-    margin-bottom: 0.5rem;
-}
-.timeline-item .icon {
-    z-index: 3;
-    left: 15px;
-    transform: translate3d(5px, -2px, 500px);
-    max-width: 100%;
-    min-height: 100%;
-    zoom: 3.5;
-    margin-top: 0.5rem;
-}
-
-/* Innehållet för varje tidslinjepunkt */
-.timeline-item .content {
-    margin-left: 40px;
-    margin-right: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-/* År och rubrik */
-.timeline-item .year {
-    font-weight: bold;
-    color: #555;
-    font-size: 1.5rem;
-    left: -20px;
-    transform: translate(-125px,45px);
-    white-space: pre-line;
-}
-
-.timeline-item .degree {
-    font-size: 1.2rem;
-    color: #333;
-}
-
-.timeline-item .description {
-    font-size: 1rem;
-    color: #666;
-}
 
 /* === FOOTER === */
 footer {
@@ -219,7 +212,7 @@ footer {
     color: #fff;
 }
 
-/*==== END OF ABOUT SECTION===*/
+/*==== END OF EDUCATION SECTION===*/
 
 
 
@@ -574,72 +567,7 @@ body.skills-page {
         margin-bottom: 0;
         
     }
-    section {
-        padding: 3rem 1rem;
-        background-color: #ebeaea;
-        left: 20px;
-        transform: translate(-40px, -2px);
-        border-radius: 20px;
-    }
-    .timeline {
-        position: relative;
-        width: 60%;
-        margin: 50px auto;
-        padding: 20px 0;
-    }
-    
-    /* Huvudlinje */
-    .timeline::before {
-        content: '';
-        position: absolute;
-        left: 45px;
-        top: 0;
-        bottom: 0;
-        width: 2px;
-        background-color: #333;
-        transform: translateX(-30%);
-    }
-    .timeline-item .line {
-        width: 2rem;
-        height: 3px;
-    
-        background-color: rgb(4, 4, 4);
-        position: absolute;
-        top: 20%;
-        left: 10%;
-        transform: translate(100%,20px);
-        z-index: 3;
-    }
-    
-    /* Cirkeln för varje tidslinjepunkt */
-    .timeline-item .circle {
-        width: 70px;
-        height: 70px;
-        background-color: #86b8ed;
-        border-radius: 50%;
-        position: absolute;
-        left: 20px;
-        transform: translate3d(-10px,30px,100px);
-        z-index: 2;
-        margin-bottom: 0.5rem;
-    }
-    .timeline-item .icon {
-        z-index: 3;
-        left: 15px;
-        transform: translate3d(5px, -2px, 500px);
-        max-width: 100%;
-        min-height: 100%;
-        zoom: 3.5;
-        margin-top: 0.5rem;
-    }
-    .timeline-item .year {
-        font-weight: bold;
-        color: #555;
-        font-size: 1.5rem;
-        left: -20px;
-        transform: translate(-125px,45px);
-        white-space: pre-line;
-    }
+   
     #contact{
      height: 100vh; /* för att contact-section blir på hela sidan */
        
@@ -733,74 +661,31 @@ body.skills-page {
       bottom: 0;
       margin-top: 1rem;
     }
-    section {
-        padding: 1rem 1rem;
-        background-color: #ebeaea;
-        left: 20px;
-        transform: translate(13px, -125px);
-        border-radius: 20px;
-        font-size: 0.5rem;
-        margin-bottom: -60px;
-    }
-    .timeline {
-        position: relative;
-        width: 60%;
-        margin: 50px auto;
-        padding: 20px 0;
-    }
+    .education-title {
+      font-size: 11px;
+      margin-top: 1.5rem;
+      margin-bottom: 1rem;
+      margin-left: 15px;
+      margin-right: 15px;
+      padding-left: 1rem;
     
-    /* Huvudlinje */
-    .timeline::before {
-        content: '';
-        position: absolute;
-        left: -5px;
-        top: 0;
-        bottom: 0;
-        width: 2px;
-        background-color: #333;
-        transform: translateX(100%);
     }
-    .timeline-item .line {
-        width: 2rem;
-        height: 2px;
-    
-        background-color: rgb(4, 4, 4);
-        position: absolute;
-        top: -20%;
-        left: 10%;
-        transform: translate(10px,110px);
-        z-index: 3;
+     .education1-item p{
+      padding: 1rem;
+      font-size: 11px;
+      margin-bottom: 1.5rem;
+      margin-left: 14px;
+      margin-right: 14px;
+      margin-top: 0.5rem;
+    } 
+    .education1-item{
+      padding: 2px;
+      margin-bottom: 1.5rem;
+      margin-left: 15px;
+      margin-right: 15px;
+      
     }
-    
-    /* Cirkeln för varje tidslinjepunkt */
-    .timeline-item .circle {
-        width: 50px;
-        height: 50px;
-        background-color: #007bff;
-        border-radius: 50%;
-        position: absolute;
-        left: -20px;
-        transform: translate3d(-5px,2px,100px);
-        z-index: 2;
-        margin-bottom: 0.5rem;
-    }
-    .timeline-item .icon {
-        z-index: 3;
-        left: 10px;
-        transform: translate3d(-8px, -10px, 500px);
-        max-width: 100%;
-        min-height: 100%;
-        zoom: 2.5;
-        margin-top: 0.5rem;
-    }
-    .timeline-item .year {
-        font-weight: bold;
-        color: #555;
-        font-size: 1rem;
-        left: -10px;
-        transform: translate(-70px,-70px);
-        white-space: pre-line;
-    }
+   
     #contact{
         height: 100%;
         margin: 0;
@@ -892,6 +777,8 @@ body.skills-page {
     margin: 0;
     min-height: auto;
     border-radius: 16px;
+    filter: brightness(1.2); /* Ökar ljusstyrkan */
+  transition: filter 0.3s ease; /* Lägger till en smidig övergång när effekten aktiveras */
   }
   
   /* Style for Timeline and other sections */
@@ -942,74 +829,80 @@ body.skills-page {
         padding: 0;
         margin: 0;
     }
-    section {
-        padding: 1rem 1rem;
-        background-color: #ebeaea;
-        left: 20px;
-        transform: translate(13px, -125px);
-        border-radius: 20px;
-        font-size: 0.5rem;
-        margin-bottom: -60px;
-    }
-    .timeline {
-        position: relative;
-        width: 60%;
-        margin: 50px auto;
-        padding: 20px 0;
+    .education-page header{
+      background-color: #3e3d3d;
+      color: #fff;
+      border-bottom: 4px solid #8b8c8c;
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      background: linear-gradient(to right, #5a5859, #2b2a2a, #7a738e);
+      background-size: 200% 100%;
+      animation: shimmer-bg 8s ease-in-out infinite;
+      color: white;
+      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);
     }
     
-    /* Huvudlinje */
-    .timeline::before {
-        content: '';
-        position: absolute;
-        left: -5px;
-        top: 0;
-        bottom: 0;
-        width: 2px;
-        background-color: #333;
-        transform: translateX(100%);
-    }
-    .timeline-item .line {
-        width: 2rem;
-        height: 2px;
     
-        background-color: rgb(4, 4, 4);
-        position: absolute;
-        top: -20%;
-        left: 10%;
-        transform: translate(1px,110px);
-        z-index: 3;
+    nav a:hover {
+      color: #bcbfbf;
+    }
+    #educations h1{
+      text-align: center;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      font-family: 'Playfair Display', serif;
+      font-size: 40px;
+      font-style: italic;
+      transform: rotate(-3deg);
+      background: linear-gradient(90deg, #878686, #080707);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: rotate-scale-down 0.65s linear both;
+    }
+    @keyframes rotate-scale-down {
+      0% {
+        -webkit-transform: scale(1) rotateZ(0);
+                transform: scale(1) rotateZ(0);
+      }
+      50% {
+        -webkit-transform: scale(0.5) rotateZ(180deg);
+                transform: scale(0.5) rotateZ(180deg);
+      }
+      100% {
+        -webkit-transform: scale(1) rotateZ(360deg);
+                transform: scale(1) rotateZ(360deg);
+      }
     }
     
-    /* Cirkeln för varje tidslinjepunkt */
-    .timeline-item .circle {
-        width: 50px;
-        height: 50px;
-        background-color: #007bff;
-        border-radius: 50%;
-        position: absolute;
-        left: -20px;
-        transform: translate3d(-5px,2px,100px);
-        z-index: 2;
-        margin-bottom: 0.5rem;
+    
+    .education-title {
+      font-size: 11px;
+      margin-top: 1.5rem;
+      margin-bottom: 1rem;
+      margin-left: 15px;
+      margin-right: 15px;
+      padding-left: 1rem;
+    
     }
-    .timeline-item .icon {
-        z-index: 3;
-        left: 10px;
-        transform: translate3d(-8px, -10px, 500px);
-        max-width: 100%;
-        min-height: 100%;
-        zoom: 2.5;
-        margin-top: 0.5rem;
+     .education1-item p{
+      padding: 1rem;
+      font-size: 11px;
+      margin-bottom: 1.5rem;
+      margin-left: 14px;
+      margin-right: 14px;
+      margin-top: 0.5rem;
+    } 
+    .education1-item{
+      padding: 2px;
+      margin-bottom: 1.5rem;
+      margin-left: 15px;
+      margin-right: 15px;
+      
     }
-    .timeline-item .year {
-        font-weight: bold;
-        color: #555;
-        font-size: 1rem;
-        left: -10px;
-        transform: translate(-70px,-70px);
-        white-space: pre-line;
-    }
+    
+    
+   
     .skills-section h2{
         color: #390626;
           font-weight: bold;
@@ -1122,6 +1015,8 @@ body.skills-page {
     margin: 0;
     min-height: auto;
     border-radius: 16px;
+    filter: brightness(1.2); /* Ökar ljusstyrkan */
+  transition: filter 0.3s ease; /* Lägger till en smidig övergång när effekten aktiveras */
   }
   
   /* Style for Timeline and other sections */
