--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ section {
     overflow: hidden;
     border-radius: 20px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    gap: 1; /*ta bort gap mellan bilderna*/
+    gap: 1; /* gap mellan bilderna*/
     padding: 0;
     padding-right: 0;
     position: relative;
@@ -311,7 +311,7 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* تغبيش عند المرور */
+    background-color: rgba(0, 0, 0, 0.3); /* تغبيش عند المرور */
     color: rgb(248, 246, 246);
     display: flex;
     align-items: center;
@@ -805,10 +805,32 @@ a.more-details:hover {
         opacity: 1; /* text be visable, when fade*/
     
       }
-      .image-overlay-container {
+     /*  .image-overlay-container {
         flex-wrap: wrap; /* السماح بلف الصور */
-        gap: 1rem; /* المسافة بين الصور */
+       /* gap: 1rem; /* المسافة بين الصور */
+
+   /* } */
+    .image-overlay-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      width: 100%;
+      max-width: 900px;
+      margin: 0 ;
+      padding: 0;
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      position: relative;
     }
+    .image-overlay-container img {
+  padding-right: 0;
+  margin-right: 0;
+
+      overflow: hidden;
+    }
+   
+    
+    
     footer{
         position:relative;
         bottom: o;
