--- a/style.css
+++ b/style.css
@@ -1025,6 +1025,17 @@ a.more-details:hover {
 
   }
   @media (max-width: 390px) {
+    
+.image-overlay-container{
+ grid-template-columns: repeat(2,fr1);
+}
+.image-overlay-container img{
+  width:55%;
+  min-height: 100%;
+  max-width: 100%;
+  height: 55%;
+
+}
     .overlay-text {
      font-size: 16px;
    
